#1208 - JSP 10회차 수업(마지막 수업)
- Servlet으로 Model2로 데이터 가져오기
- Delete랑 Update 안됨ㅋㅋㅋㅋ
- 알아서 수정할것
- 끝났다!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/ModelTWO/WebContent/WEB-INF/commandList.properties
+++ b/ModelTWO/WebContent/WEB-INF/commandList.properties
@@ -1,5 +1,20 @@
 #loginForm
 meLoginForm=mypkg.controller.MemberLoginFormController
+
 #login
 meLogin=mypkg.controller.MemberLoginController
-#meDetailView=mypkg.controller.MemberDetailViewController
+
+#DetailView
+meDetailView=mypkg.controller.MemberDetailViewController
+
+#MemberList
+meList=mypkg.controller.MemberListController
+
+#UpdateForm
+meUpdateForm=mypkg.controller.MemberUpdateFormController
+
+#Update
+#meUpdate=mypkg.controller.MemberUpdateController
+
+#Delete
+#meDelete=mypkg.controller.MemberDeleteController
